Add script for automatic mobile waybar configuration

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -3,7 +3,8 @@ monitor=HDMI-A-1,preferred,1920x0,auto
 monitor=eDP-1,preferred,3840x0,auto
 
 # exec-once = waybar & hyprpaper & firefox
-exec-once = waybar & hyprpaper & dunst
+$bar = ~/.config/scripts/bar.sh
+exec-once = $bar & hyprpaper & dunst
 
 # source = ~/.config/hypr/myColors.conf
 
