--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -170,6 +170,13 @@ bind = $mainMod, mouse_up, workspace, e-1
 
 bind = $mainMod, TAB, workspace, previous
 
+bind = ,xf86audioraisevolume, exec, pamixer -i 5
+bind = ,xf86audiolowervolume, exec, pamixer -d 5
+bind = ,xf86audiomute, exec, pamixer -t
+bind = ,xf86audioplay, exec, playerctl play-pause
+bind = ,xf86audionext, exec, playerctl next
+bind = ,xf86audioprev, exec, playerctl previous
+
 bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
 
