--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -180,12 +180,12 @@ bind = ,xf86audioprev, exec, playerctl previous
 bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
 
-wsbind = 1, DP-2
-wsbind = 2, DP-2
-wsbind = 3, DP-2
-wsbind = 4, HDMI-A-1
-wsbind = 5, HDMI-A-1
-wsbind = 6, HDMI-A-1
-wsbind = 7, eDP-1
-wsbind = 8, eDP-1
-wsbind = 9, eDP-1
+workspace = 1, monitor:DP-2
+workspace = 2, monitor:DP-2
+workspace = 3, monitor:DP-2
+workspace = 4, monitor:HDMI-A-1
+workspace = 5, monitor:HDMI-A-1
+workspace = 6, monitor:HDMI-A-1
+workspace = 7, monitor:eDP-1
+workspace = 8, monitor:eDP-1
+workspace = 9, monitor:eDP-1
