--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -4,7 +4,8 @@ monitor=eDP-1,preferred,3840x0,auto
 
 # exec-once = waybar & hyprpaper & firefox
 $bar = ~/.config/scripts/bar.sh
-exec-once = $bar & hyprpaper & dunst
+$idle = swayidle -w
+exec-once = $bar & $idle & hyprpaper & dunst
 
 # source = ~/.config/hypr/myColors.conf
 
