Change quick screenshot tool to grimblast

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -103,7 +103,7 @@ $powermenu = ~/.config/scripts/powermenu.sh
 $lock = ~/.config/scripts/lock.sh
 $togglenotifications = ~/.config/scripts/toggle_notifications.sh
 $dismissnotifications = dunstctl close
-$screenshot = grim -g "$(slurp)" - | wl-copy
+$screenshot = grimblast copy area
 
 # Key bindings
 $mainMod = SUPER
