--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -100,6 +100,7 @@ windowrulev2 = move 50% 100%, title:^(Firefox — Sharing Indicator)$
 $terminal = kitty
 $menu = wofi -i --show drun
 $powermenu = ~/.config/scripts/powermenu.sh
+$audiooutputmenu = ~/.config/scripts/audio_output.sh
 $lock = ~/.config/scripts/lock.sh
 $togglenotifications = ~/.config/scripts/toggle_notifications.sh
 $dismissnotifications = dunstctl close
@@ -114,6 +115,7 @@ bind = $mainMod SHIFT, e, exit,
 bind = $mainMod, S, togglefloating, 
 bind = $mainMod, SPACE, exec, $menu
 bind = $mainMod ALT, SPACE, exec, $powermenu
+bind = $mainMod, G, exec, $audiooutputmenu
 bind = $mainMod, L, exec, $lock
 bind = $mainMod, end, exec, $togglenotifications
 bind = $mainMod, delete, exec, dunstctl close
