Remove startup Hyprland logo

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -45,6 +45,10 @@ general {
     layout = dwindle
 }
 
+misc {
+    disable_hyprland_logo = true
+}
+
 decoration {
     rounding = 2
     blur = yes
