--- a/.config/cava/config
+++ b/.config/cava/config
@@ -53,6 +53,7 @@ bar_spacing = 1
 # For alsa 'source' will be the capture device.
 # For fifo 'source' will be the path to fifo-file.
 # For shmem 'source' will be /squeezelite-AA:BB:CC:DD:EE:FF where 'AA:BB:CC:DD:EE:FF' will be squeezelite's MAC address
+method = pipewire
 ; method = pulse
 ; source = auto
 
