--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -1,8 +1,9 @@
-monitor=DP-2,preferred,0x0,auto
+monitor=DP-1,preferred,0x0,auto
 monitor=HDMI-A-1,preferred,1920x0,auto
 monitor=eDP-1,preferred,3840x0,auto
+# monitor=HDMI-A-1,preferred,0x0,1.5
+# monitor=DP-1,preferred,3840x0,auto
 
-# exec-once = waybar & hyprpaper & firefox
 $bar = ~/.config/scripts/bar.sh
 $idle = swayidle -w
 exec-once = $bar & $idle & hyprpaper & dunst
@@ -12,11 +13,13 @@ exec-once = $bar & $idle & hyprpaper & dunst
 env = XCURSOR_SIZE,24
 
 # NVIDIA
+# env = WLR_DRM_DEVICES,/dev/dri/card1:/dev/dri/card0
 # env = LIBVA_DRIVER_NAME,nvidia
-# env = XDG_SESSION_TYPE,wayland
+env = XDG_SESSION_TYPE,wayland
 # env = GBM_BACKEND,nvidia-drm
 # env = __GLX_VENDOR_LIBRARY_NAME,nvidia
-# env = WLR_NO_HARDWARE_CURSORS,1
+env = WLR_NO_HARDWARE_CURSORS,1
+
 env = QT_STYLE_OVERRIDE,kvantum
 
 input {
@@ -51,15 +54,18 @@ misc {
 
 decoration {
     rounding = 2
-    blur = yes
-    blur_size = 10
-    blur_passes = 4
-    blur_new_optimizations = on
 
     drop_shadow = yes
     shadow_range = 4
     shadow_render_power = 3
     col.shadow = rgba(1a1a1aee)
+
+    blur {
+      enabled = yes
+      size = 10
+      passes = 4
+      new_optimizations = on
+    }
 }
 
 animations {
@@ -97,6 +103,7 @@ gestures {
 # Example windowrule v2
 windowrulev2 = float, title:^(Firefox — Sharing Indicator)$
 windowrulev2 = nofullscreenrequest, title:^(Firefox — Sharing Indicator)$
+windowrulev2 = nomaximizerequest, title:^(Firefox — Sharing Indicator)$
 windowrulev2 = move 50% 100%, title:^(Firefox — Sharing Indicator)$
 # See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
 
@@ -187,9 +194,9 @@ bind = ,xf86audioprev, exec, playerctl previous
 bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
 
-workspace = 1, monitor:DP-2
-workspace = 2, monitor:DP-2
-workspace = 3, monitor:DP-2
+workspace = 1, monitor:DP-1
+workspace = 2, monitor:DP-1
+workspace = 3, monitor:DP-1
 workspace = 4, monitor:HDMI-A-1
 workspace = 5, monitor:HDMI-A-1
 workspace = 6, monitor:HDMI-A-1
