Remove new splash text from Hyprpaper

--- a/.config/hypr/hyprpaper.conf
+++ b/.config/hypr/hyprpaper.conf
@@ -4,4 +4,6 @@ wallpaper = eDP-1, ~/Images/Wallpapers/black_leafes.jpg
 wallpaper = HDMI-A-1, ~/Images/Wallpapers/black_leafes.jpg
 wallpaper = DP-1, ~/Images/Wallpapers/black_leafes.jpg
 
+splash = off
+
 ipc = off
