--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -14,10 +14,11 @@ env = XCURSOR_SIZE,24
 
 # NVIDIA
 # env = WLR_DRM_DEVICES,/dev/dri/card1:/dev/dri/card0
-# env = LIBVA_DRIVER_NAME,nvidia
+# env = WLR_DRM_DEVICES,/dev/dri/card0:/dev/dri/card1
+env = LIBVA_DRIVER_NAME,nvidia
 env = XDG_SESSION_TYPE,wayland
-# env = GBM_BACKEND,nvidia-drm
-# env = __GLX_VENDOR_LIBRARY_NAME,nvidia
+env = GBM_BACKEND,nvidia
+env = __GLX_VENDOR_LIBRARY_NAME,nvidia
 env = WLR_NO_HARDWARE_CURSORS,1
 
 env = QT_STYLE_OVERRIDE,kvantum
