Update windowrulev2 to new suppressevent format

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -1,8 +1,9 @@
 monitor=DP-1,preferred,0x0,auto
 monitor=HDMI-A-1,preferred,1920x0,auto
 monitor=eDP-1,preferred,3840x0,auto
-# monitor=HDMI-A-1,preferred,0x0,1.5
-# monitor=DP-1,preferred,3840x0,auto
+
+# monitor=eDP-1,preferred,0x0,auto
+# monitor=HDMI-A-1,preferred,1920x0,1.25
 
 $bar = ~/.config/scripts/bar.sh
 $idle = swayidle -w
@@ -103,8 +104,7 @@ gestures {
 # windowrule = float, ^(kitty)$
 # Example windowrule v2
 windowrulev2 = float, title:^(Firefox — Sharing Indicator)$
-windowrulev2 = nofullscreenrequest, title:^(Firefox — Sharing Indicator)$
-windowrulev2 = nomaximizerequest, title:^(Firefox — Sharing Indicator)$
+windowrulev2 = suppressevent fullscreen maximize, title:^(Firefox — Sharing Indicator)$
 windowrulev2 = move 50% 100%, title:^(Firefox — Sharing Indicator)$
 # See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
 
