Change monitor layout

--- a/.config/waybar/config
+++ b/.config/waybar/config
@@ -6,7 +6,7 @@
     "margin-right": 15,
     "position": "top",
     "layer": "top",
-    "output": "HDMI-A-1",
+    "output": "DP-1",
     "modules-left": [
       "hyprland/workspaces",
       "custom/clock-icon",
