--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -1,6 +1,6 @@
-monitor=DP-1,preferred,0x0,auto
-monitor=HDMI-A-1,preferred,1920x0,auto
-monitor=eDP-1,preferred,3840x0,auto
+monitor=eDP-1,preferred,0x0,auto
+monitor=DP-1,preferred,1920x0,auto
+monitor=HDMI-A-1,preferred,3840x0,auto
 
 # monitor=eDP-1,preferred,0x0,auto
 # monitor=HDMI-A-1,preferred,1920x0,1.25
@@ -16,11 +16,11 @@ env = XCURSOR_SIZE,24
 # NVIDIA
 # env = WLR_DRM_DEVICES,/dev/dri/card1:/dev/dri/card0
 # env = WLR_DRM_DEVICES,/dev/dri/card0:/dev/dri/card1
-env = LIBVA_DRIVER_NAME,nvidia
+# env = LIBVA_DRIVER_NAME,nvidia
 env = XDG_SESSION_TYPE,wayland
-env = GBM_BACKEND,nvidia
-env = __GLX_VENDOR_LIBRARY_NAME,nvidia
-env = WLR_NO_HARDWARE_CURSORS,1
+# env = GBM_BACKEND,nvidia-drm
+# env = __GLX_VENDOR_LIBRARY_NAME,nvidia
+# env = WLR_NO_HARDWARE_CURSORS,1
 
 env = QT_STYLE_OVERRIDE,kvantum
 
@@ -153,6 +153,11 @@ bind = $mainMod CONTROL, right, movewindow, r
 bind = $mainMod CONTROL, up, movewindow, u
 bind = $mainMod CONTROL, down, movewindow, d
 
+bind = $mainMod CONTROL ALT, left, swapwindow, l
+bind = $mainMod CONTROL ALT, right, swapwindow, r
+bind = $mainMod CONTROL ALT, up, swapwindow, u
+bind = $mainMod CONTROL ALT, down, swapwindow, d
+
 bind = $mainMod ALT, left, resizeactive, -$resizeModifier 0
 bind = $mainMod ALT, right, resizeactive, $resizeModifier 0 
 bind = $mainMod ALT, up, resizeactive, 0 $resizeModifier
@@ -191,16 +196,18 @@ bind = ,xf86audiomute, exec, pamixer -t
 bind = ,xf86audioplay, exec, playerctl play-pause
 bind = ,xf86audionext, exec, playerctl next
 bind = ,xf86audioprev, exec, playerctl previous
+bind = ,XF86MonBrightnessUp, exec, brightnessctl s 10%+
+bind = ,XF86MonBrightnessDown, exec, brightnessctl s 10%-
 
 bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
 
-workspace = 1, monitor:DP-1
-workspace = 2, monitor:DP-1
-workspace = 3, monitor:DP-1
-workspace = 4, monitor:HDMI-A-1
-workspace = 5, monitor:HDMI-A-1
-workspace = 6, monitor:HDMI-A-1
-workspace = 7, monitor:eDP-1
-workspace = 8, monitor:eDP-1
-workspace = 9, monitor:eDP-1
+workspace = 1, monitor:eDP-1
+workspace = 2, monitor:eDP-1
+workspace = 3, monitor:eDP-1
+workspace = 4, monitor:DP-1
+workspace = 5, monitor:DP-1
+workspace = 6, monitor:DP-1
+workspace = 7, monitor:HDMI-A-1
+workspace = 8, monitor:HDMI-A-1
+workspace = 9, monitor:HDMI-A-1
