Switch to hypridle

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -6,7 +6,7 @@ monitor=HDMI-A-1,preferred,3840x0,auto
 # monitor=HDMI-A-1,preferred,1920x0,1.25
 
 $bar = ~/.config/scripts/bar.sh
-$idle = swayidle -w
+$idle = hypridle
 exec-once = $bar & $idle & hyprpaper & dunst
 
 # source = ~/.config/hypr/myColors.conf
@@ -113,7 +113,7 @@ $terminal = kitty
 $menu = wofi -i --show drun
 $powermenu = ~/.config/scripts/powermenu.sh
 $audiooutputmenu = ~/.config/scripts/audio_output.sh
-$lock = ~/.config/scripts/lock.sh
+$lock = loginctl lock-session
 $togglenotifications = ~/.config/scripts/toggle_notifications.sh
 $dismissnotifications = dunstctl close
 $screenshot = grimblast copy area
