--- a/.config/Code/User/settings.json
+++ b/.config/Code/User/settings.json
@@ -115,5 +115,6 @@
     "*.Rmd": "rmd"
   },
   "php.suggest.basic": false,
-  "editor.inlineSuggest.enabled": false
+  "editor.inlineSuggest.enabled": false,
+  "prisma.showPrismaDataPlatformNotification": false
 }
