Adapt one external monitor setup

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -3,7 +3,7 @@ monitor=DP-1,preferred,1920x0,auto
 monitor=HDMI-A-1,preferred,3840x0,auto
 
 # monitor=eDP-1,preferred,0x0,auto
-# monitor=HDMI-A-1,preferred,1920x0,1.25
+# monitor=HDMI-A-1,2560x1440,1920x0,auto
 
 $bar = ~/.config/scripts/bar.sh
 $idle = hypridle
