Add hyprcursor environment variables

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -11,7 +11,8 @@ exec-once = $bar & $idle & hyprpaper & dunst
 
 # source = ~/.config/hypr/myColors.conf
 
-env = XCURSOR_SIZE,24
+env = HYPRCURSOR_THEME,McMojave
+env = HYPRCURSOR_SIZE,24
 
 # NVIDIA
 # env = WLR_DRM_DEVICES,/dev/dri/card1:/dev/dri/card0
