--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -11,8 +11,10 @@ exec-once = $bar & $idle & hyprpaper & dunst
 
 # source = ~/.config/hypr/myColors.conf
 
-env = HYPRCURSOR_THEME,McMojave
+env = HYPRCURSOR_THEME,phinger-cursors-dark
 env = HYPRCURSOR_SIZE,24
+# env = XCURSOR_THEME,phinger-cursors-dark
+# env = XCURSOR_SIZE,24
 
 # NVIDIA
 # env = WLR_DRM_DEVICES,/dev/dri/card1:/dev/dri/card0
@@ -90,7 +92,7 @@ dwindle {
 }
 
 master {
-    new_is_master = true
+    new_status = slave
 }
 
 gestures {
