--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -1,5 +1,5 @@
-monitor=eDP-1,preferred,0x0,auto
-monitor=DP-1,preferred,1920x0,auto
+monitor=eDP-1,preferred,0x0,auto,bitdepth,10
+monitor=DP-2,preferred,1920x0,auto
 monitor=HDMI-A-1,preferred,3840x0,auto
 
 # monitor=eDP-1,preferred,0x0,auto
@@ -91,10 +91,6 @@ dwindle {
     preserve_split = yes
 }
 
-master {
-    new_status = slave
-}
-
 gestures {
     workspace_swipe = off
 }
@@ -131,40 +127,40 @@ bind = $mainMod, S, togglefloating,
 bind = $mainMod, SPACE, exec, $menu
 bind = $mainMod ALT, SPACE, exec, $powermenu
 bind = $mainMod, G, exec, $audiooutputmenu
-bind = $mainMod, L, exec, $lock
+bind = $mainMod CONTROL, Q, exec, $lock
 bind = $mainMod, end, exec, $togglenotifications
 bind = $mainMod, delete, exec, dunstctl close
 bind = $mainMod SHIFT, S, exec, $screenshot
 
 bind = $mainMod, Q, killactive, 
 bind = $mainMod, P, pseudo, # dwindle
-bind = $mainMod, J, togglesplit, # dwindle
+bind = $mainMod, R, togglesplit, # dwindle
 bind = $mainMod, F, fullscreen
 
-bind = $mainMod, left, movefocus, l
-bind = $mainMod, right, movefocus, r
-bind = $mainMod, up, movefocus, u
-bind = $mainMod, down, movefocus, d
+bind = $mainMod, H, movefocus, l
+bind = $mainMod, L, movefocus, r
+bind = $mainMod, K, movefocus, u
+bind = $mainMod, J, movefocus, d
 
-bind = $mainMod SHIFT, left, movewindow, mon:l
-bind = $mainMod SHIFT, right, movewindow, mon:r
-bind = $mainMod SHIFT, up, movewindow, mon:u
-bind = $mainMod SHIFT, down, movewindow, mon:d
+bind = $mainMod SHIFT, H, movewindow, mon:l
+bind = $mainMod SHIFT, L, movewindow, mon:r
+bind = $mainMod SHIFT, K, movewindow, mon:u
+bind = $mainMod SHIFT, J, movewindow, mon:d
 
-bind = $mainMod CONTROL, left, movewindow, l
-bind = $mainMod CONTROL, right, movewindow, r
-bind = $mainMod CONTROL, up, movewindow, u
-bind = $mainMod CONTROL, down, movewindow, d
+bind = $mainMod CONTROL, H, movewindow, l
+bind = $mainMod CONTROL, L, movewindow, r
+bind = $mainMod CONTROL, K, movewindow, u
+bind = $mainMod CONTROL, J, movewindow, d
 
-bind = $mainMod CONTROL ALT, left, swapwindow, l
-bind = $mainMod CONTROL ALT, right, swapwindow, r
-bind = $mainMod CONTROL ALT, up, swapwindow, u
-bind = $mainMod CONTROL ALT, down, swapwindow, d
+bind = $mainMod CONTROL ALT, H, swapwindow, l
+bind = $mainMod CONTROL ALT, L, swapwindow, r
+bind = $mainMod CONTROL ALT, K, swapwindow, u
+bind = $mainMod CONTROL ALT, J, swapwindow, d
 
-bind = $mainMod ALT, left, resizeactive, -$resizeModifier 0
-bind = $mainMod ALT, right, resizeactive, $resizeModifier 0 
-bind = $mainMod ALT, up, resizeactive, 0 $resizeModifier
-bind = $mainMod ALT, down, resizeactive, 0 -$resizeModifier
+bind = $mainMod ALT, H, resizeactive, -$resizeModifier 0
+bind = $mainMod ALT, L, resizeactive, $resizeModifier 0 
+bind = $mainMod ALT, K, resizeactive, 0 $resizeModifier
+bind = $mainMod ALT, J, resizeactive, 0 -$resizeModifier
 
 bind = $mainMod, 1, workspace, 1
 bind = $mainMod, 2, workspace, 2
@@ -208,9 +204,9 @@ bindm = $mainMod, mouse:273, resizewindow
 workspace = 1, monitor:eDP-1
 workspace = 2, monitor:eDP-1
 workspace = 3, monitor:eDP-1
-workspace = 4, monitor:DP-1
-workspace = 5, monitor:DP-1
-workspace = 6, monitor:DP-1
+workspace = 4, monitor:DP-2
+workspace = 5, monitor:DP-2
+workspace = 6, monitor:DP-2
 workspace = 7, monitor:HDMI-A-1
 workspace = 8, monitor:HDMI-A-1
 workspace = 9, monitor:HDMI-A-1
