--- a/.config/Code/User/settings.json
+++ b/.config/Code/User/settings.json
@@ -26,7 +26,7 @@
       "commands": ["workbench.action.closeActiveEditor"]
     },
     {
-      "before": ["<leader>", "s"],
+      "before": ["s"],
       "after": ["<leader>", "<leader>", "s"]
     },
     {
@@ -62,7 +62,7 @@
   },
   "vim.smartRelativeLine": true,
   "editor.lineNumbers": "relative",
-  "editor.fontFamily": "'SauceCodePro Nerd Font'",
+  "editor.fontFamily": "'Iosevka Extended'",
   "[typescript]": {
     "editor.defaultFormatter": "esbenp.prettier-vscode"
   },
@@ -100,7 +100,8 @@
   "julia.symbolCacheDownload": true,
   "julia.enableTelemetry": false,
   "vs-kubernetes": {
-    "vs-kubernetes.minikube-show-information-expiration": "2024-11-22T17:49:32.674Z"
+    "vs-kubernetes.minikube-show-information-expiration": "2024-11-22T17:49:32.674Z",
+    "vs-kubernetes.crd-code-completion": "enabled"
   },
   "java.configuration.runtimes": [
     {
@@ -125,5 +126,7 @@
   "[csharp]": {
     "editor.defaultFormatter": "ms-dotnettools.csharp"
   },
-  "haskell.formattingProvider": "fourmolu"
+  "haskell.formattingProvider": "fourmolu",
+  "rust-analyzer.cargo.features": "all",
+  "editor.fontLigatures": "\"calt\" 0, \"JPST\" 1"
 }
