--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -1,6 +1,10 @@
-monitor=eDP-1,preferred,0x0,auto,bitdepth,10
+# monitor=eDP-1,preferred,0x0,auto
+# monitor=DP-2,preferred,1920x0,auto
+# monitor=HDMI-A-1,preferred,3840x0,auto
+
+monitor=HDMI-A-1,preferred,0x0,auto
 monitor=DP-2,preferred,1920x0,auto
-monitor=HDMI-A-1,preferred,3840x0,auto
+monitor=eDP-1,preferred,3840x0,auto
 
 # monitor=eDP-1,preferred,0x0,auto
 # monitor=HDMI-A-1,2560x1440,1920x0,auto
@@ -19,11 +23,11 @@ env = HYPRCURSOR_SIZE,24
 # NVIDIA
 # env = WLR_DRM_DEVICES,/dev/dri/card1:/dev/dri/card0
 # env = WLR_DRM_DEVICES,/dev/dri/card0:/dev/dri/card1
-# env = LIBVA_DRIVER_NAME,nvidia
+env = LIBVA_DRIVER_NAME,nvidia
 env = XDG_SESSION_TYPE,wayland
-# env = GBM_BACKEND,nvidia-drm
-# env = __GLX_VENDOR_LIBRARY_NAME,nvidia
-# env = WLR_NO_HARDWARE_CURSORS,1
+env = GBM_BACKEND,nvidia-drm
+env = __GLX_VENDOR_LIBRARY_NAME,nvidia
+env = WLR_NO_HARDWARE_CURSORS,1
 
 env = QT_STYLE_OVERRIDE,kvantum
 
@@ -59,11 +63,6 @@ misc {
 
 decoration {
     rounding = 2
-
-    drop_shadow = yes
-    shadow_range = 4
-    shadow_render_power = 3
-    col.shadow = rgba(1a1a1aee)
 
     blur {
       enabled = yes
@@ -197,16 +196,19 @@ bind = ,xf86audionext, exec, playerctl next
 bind = ,xf86audioprev, exec, playerctl previous
 bind = ,XF86MonBrightnessUp, exec, brightnessctl s 10%+
 bind = ,XF86MonBrightnessDown, exec, brightnessctl s 10%-
+bind = $mainMod, Print, exec, playerctl previous
+bind = $mainMod, Scroll_Lock, exec, playerctl play-pause
+bind = $mainMod, Pause, exec, playerctl next
 
 bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
 
-workspace = 1, monitor:eDP-1
-workspace = 2, monitor:eDP-1
-workspace = 3, monitor:eDP-1
+workspace = 1, monitor:HDMI-A-1
+workspace = 2, monitor:HDMI-A-1
+workspace = 3, monitor:HDMI-A-1
 workspace = 4, monitor:DP-2
 workspace = 5, monitor:DP-2
 workspace = 6, monitor:DP-2
-workspace = 7, monitor:HDMI-A-1
-workspace = 8, monitor:HDMI-A-1
-workspace = 9, monitor:HDMI-A-1
+workspace = 7, monitor:eDP-1
+workspace = 8, monitor:eDP-1
+workspace = 9, monitor:eDP-1
